
* Bug fixes:
    * Ojay.changeAlias now works in Internet Explorer.
    * ClearType is now reinstated when setting an element's
      opacity to 1.
    * JSONP callback generation/cleanup bug.
    * Tabs no longer animate when created.
    * Ojay.Forms.Select now respects disabled attributes on
      option elements.
    * Removing all the elements from a Paginator no longer
      throws errors.


Version 0.4.1
June 25 2009
================================================================

* Additions to core:
    * Upgrade to JS.Class 2.1. See http://jsclass.jcoglan.com
      for details.
    * All classes now have displayNames set up for debugging
      and profiling.

* Bug fixes:
    * The HTML used for Tabs toggles is now more accurately
      copied so, for example, images may be used as toggles.
    * Handling of concurrent JSONP requests is now more robust.


Version 0.4.0
April 29 2009
================================================================

* Additions to core:
    * Custom DOM events. DomCollection#on() treats event names
      containing colons as custom events, and a fire() method
      is provided for notifying observers.

* Bug fixes:
    * DomCollection#set() handles boolean attributes correctly
    * '+' symbols in URLs are now parsed as spaces by Ojay.HTTP

* New packages: Tabs

* Additions to Forms package:
    * New method: Ojay.Forms.submit(form) acts as a replacement
      for Form#submit() that respects validation and Ajax rules.

* Additions to HTTP package:
    * Raw strings can be used as the body for POST requests, e.g.
      Ojay.HTTP.POST('/endpoint', 'request body', { /* callbacks */ })

* Additions to Paginator package:
    * New methods: push(), pop(), shift() and unshift() for
      adding and removing items from Paginators


Version 0.3.1
December 1 2008
================================================================

* Bug fixes:
    * Fixed some layout-related problems with Accordion in
      Internet Explorer.